# funnyenglish-android-mvp

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  =20.0  AGENTS.md  DEPLOY.md  README.md  android_assemble.bat  android_build_fix.bat  android_check.bat  android_cli_analysis_report.md  android_test.bat  backend_build.bat  backend_start.bat  backend_test.bat  bot.py  build.bat  build_backend.bat  compile.bat  cookies.txt  cpp_build.bat  cpp_test.bat  docker-compose.prod.yml  docker-compose.yml  dumpsys_activity.txt  dumpsys_package.txt  e2e_test.py  final_check.py  layout_dump.xml  network_connectivity.txt  network_netstats.txt  network_wifi.txt  perf_battery.txt  perf_gfxinfo.txt  perf_gfxinfo2.txt  perf_gfxinfo3.txt  perf_meminfo.txt  perf_meminfo2.txt  (+23 more)
.github/workflows/: ci-android.yml  ci-python.yml  deploy.yml  release-model.yml
.haft/: project.yaml
.haft/specs/: target-environment.yaml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
android/: .editorconfig  build.gradle.kts  detekt.yml  gradle.properties  keystore.properties.template  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/core/common/: build.gradle.kts
android/gradle/: libs.versions.toml
android/model_asset_pack/: build.gradle.kts
backend/: Dockerfile  build.gradle.kts  settings.gradle.kts
backend/gradle/: libs.versions.toml
docs/: ANDROID_MVP_PRD.md  TECH_SPEC.md
nginx/: nginx.conf
systemd/: funnyenglish-bot.service
(+131 files in other folders)
